[project]
name = "realtime-live2d"
version = "0.1.0"
description = "Real-time anime character animation from video/webcam using pose-conditioned diffusion"
requires-python = ">=3.10"
dependencies = [
    "diffusers>=0.27.0",
    "transformers>=4.38.0",
    "accelerate>=0.27.0",
    "controlnet-aux>=0.0.7",
    "mediapipe>=0.10.9",
    "opencv-python>=4.9.0",
    "numpy>=1.26.0",
    "Pillow>=10.2.0",
    "huggingface_hub>=0.21.0",
    "safetensors>=0.4.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[dependency-groups]
dev = []
