[project]
name = "realtime-live2d"
version = "0.1.0"
description = "Real-time anime character animation from video/webcam using pose-conditioned diffusion"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "diffusers>=0.27.0",
    "transformers>=4.38.0",
    "accelerate>=0.27.0",
    "controlnet-aux>=0.0.7",
    "mediapipe>=0.10.9",
    "opencv-python>=4.9.0",
    "numpy>=1.26.0",
    "Pillow>=10.2.0",
    "huggingface_hub>=0.21.0",
    "safetensors>=0.4.0",
]

[project.scripts]
live2d = "main:main"

# Torch cu128 wheels are pinned to exact URLs to avoid PyTorch index hash
# instability (the index updates wheels in-place without bumping versions).
[tool.uv.sources]
torch = { url = "https://download.pytorch.org/whl/cu128/torch-2.7.0%2Bcu128-cp312-cp312-win_amd64.whl" }
torchvision = { url = "https://download.pytorch.org/whl/cu128/torchvision-0.22.0%2Bcu128-cp312-cp312-win_amd64.whl" }

[dependency-groups]
dev = [
    "hatchling>=1.29.0",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
